--- a/Lecture_notes/Lesson_1_Sets.ipynb
+++ b/Lecture_notes/Lesson_1_Sets.ipynb
@@ -67,14 +67,14 @@
     "\n",
     "For example, let $A = \\{3,7\\}$ and $B = \\{3,69\\}$ then \n",
     "$$A \\cup B = \\{3,7,69\\}.$$\n",
-    "Notice that we donot count '3' twice."
+    "Notice that we do not count '3' twice."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exracting common elements is called the **intersection** We will denote a union the symbol $\\cap$.\n",
+    "Extracting common elements is called the **intersection**. We will denote an intersection with the symbol $\\cap$.\n",
     "For example, \n",
     "$$A \\cap B  = \\{3\\}$$\n"
    ]
@@ -115,14 +115,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remember $\\Omega$ is the set of all possible outcomes.\n"
+    "$\\Omega$ is the set of all possible outcomes.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visually, we have that the union union and intersection are the following respectively."
+    "Visually, we have that the union and intersection are the following respectively."
    ]
   },
   {
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can define all the elements not in a set. This is called the complement denoted by a subscript $c$. The complement of set $A$ is $A^C$.\n",
+    "We can define all the elements not in a set. This is called the complement denoted by a subscript $c$. The complement of set $A$ is $A^c$.\n",
     "\n",
     "For example let $\\Omega =  \\{1,2,3,4,5,6,7,8,9,10\\}$ and $E = \\{1,2,3,4,8,9,10\\}$ so \n",
     "\n",
@@ -161,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note, we have the exclusion operation denoted by \\.\n",
+    "Note, we have the exclusion operation denoted by\n",
     "\n",
     "$$\\Omega \\setminus E = \\{5,6,7\\} $$\n",
     "\n",
@@ -218,7 +218,7 @@
    "metadata": {},
    "source": [
     "**Task 1:**\n",
-    "Define a sample space for the experiment of putting three different books on a shelf in random order.  If two of these three books are a two-volume dictionary, describe the event that thesevolumes stand in increasing order side-by-side (i.e., volume I precedes volume II)."
+    "Define a sample space for the experiment of putting three different books on a shelf in random order.  If two of these three books are a two-volume dictionary, describe the event that these volumes stand in increasing order side-by-side (i.e., volume I precedes volume II)."
    ]
   },
   {
@@ -265,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
