--- a/Lecture_notes/Lesson_2_Python_shows_his_ugly_mug.ipynb
+++ b/Lecture_notes/Lesson_2_Python_shows_his_ugly_mug.ipynb
@@ -481,7 +481,7 @@
    "source": [
     "ph = 2\n",
     "\n",
-    "if ph < 6:\n",
+    "if ph < 7:\n",
     "    print('You are acidic')\n",
     "elif ph == 7:\n",
     "    print('You are neutral')\n",
@@ -600,7 +600,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let use the chech which numbers from 0 10 are even and odd."
+    "Now let use the chech which numbers from 0 to 10 are even and odd."
    ]
   },
   {
@@ -780,14 +780,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "It will take you 81 week to save for that car\n"
+      "It will take you 81 weeks to save for that car.\n"
      ]
     }
    ],
@@ -807,7 +807,7 @@
     "    week = week + 1\n",
     "    bank_savings += pay - rent- bills - food\n",
     "    \n",
-    "print(f'It will take you {week} week to save for that car.')"
+    "print(f'It will take you {week} weeks to save for that car.')"
    ]
   },
   {
@@ -895,7 +895,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
